--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area - Browse Everything</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -60,6 +60,9 @@
                     <div class="logo-item">
                         <img src="assets/logos/logo5.png" alt="Logo 5">
                     </div>
+                    <div class="logo-item">
+                        <img src="assets/logos/logo6.png" alt="Logo 6">
+                    </div>                    
                 </div>
             </div>
         </section>
